Revert "Switch html to unorder list"
This reverts commit 529899126195a1e6a5db6a79ae9922e086ec0aca.

--- a/index.html
+++ b/index.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="robots" content="INDEX, FOLLOW" />
-        <meta name="description" content="Full Screen Content Slider." />
-        <meta name="author" content="Jacob Perez" />
-        <title>Full Screen Content Slider</title>
-        <link rel="stylesheet" href="css/slider.css" />
-        <script src="js/slider.js" defer></script>
-    </head>
 
-    <body>
-        <!-- Slider -->
-        <ul class="slider">
-            <li class="slide">
-                <img src="img/1.jpg" alt="" />
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="robots" content="INDEX, FOLLOW">
+	<meta name="description" content="Full Screen Content Slider.">
+	<meta name="author" content="">
+	<title>Full Screen Content Slider</title>
+	<link rel="stylesheet" href="css/slider.css">
+	<script src="js/slider.js" defer></script>
+</head>
 
-                <div class="slide-content">
-                    <p class="slide-title">JavaScript Slider</p>
-                </div>
-            </li>
+<body>
+	<!-- Slider -->
+	<article class="slider">
+		<section class="slide">
+			<img src="img/1.jpg" alt="">
 
-            <li class="slide">
-                <img src="img/2.jpg" alt="" />
+			<div class="slide-content">
+				<p class="slide-title">JavaScript Slider</p>
+			</div>
+		</section>
 
-                <div class="slide-content">
-                    <p class="slide-title">Responsive</p>
-                </div>
-            </li>
+		<section class="slide">
+			<img src="img/2.jpg" alt="">
 
-            <li class="slide">
-                <img src="img/3.jpg" alt="" />
+			<div class="slide-content">
+				<p class="slide-title">Responsive</p>
+			</div>
+		</section>
 
-                <div class="slide-content">
-                    <p class="slide-title">Retina Ready</p>
-                </div>
-            </li>
+		<section class="slide">
+			<img src="img/3.jpg" alt="">
 
-            <li class="slide">
-                <img src="img/4.jpg" alt="" />
+			<div class="slide-content">
+				<p class="slide-title">Retina Ready</p>
+			</div>
+		</section>
 
-                <div class="slide-content">
-                    <p class="slide-title">Mobile Ready</p>
-                </div>
-            </li>
+		<section class="slide">
+			<img src="img/4.jpg" alt="">
 
-            <li class="slider-nav">
-                <span class="prev-slide"></span>
-                <span class="next-slide"></span>
-            </li>
-        </ul>
-        <!-- end Slider -->
-    </body>
+			<div class="slide-content">
+				<p class="slide-title">Mobile Ready</p>
+			</div>
+		</section>
+
+		<nav class="slider-nav">
+			<span class="prev-slide"></span>
+			<span class="next-slide"></span>
+		</nav>
+	</article>
+	<!-- end Slider -->
+</body>
+
 </html>
